data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_181.wast
;; 2. **Nested Loop with `br_if` Mislabeling**:    - **Description**: Test a conditional branch (`br_if`) within a nested loop setup where `br_if` is supposed to target the innermost loop, but mislabeling causes it to incorrectly target an outer block.    - **Constraint**: Validity of label indexing in `br_if` to ensure it correctly targets the correct loop based on the given condition.

(assert_invalid
  (module
    (func (block (loop (i32.const 0) (br_if 1 (i32.const 1)))))
  )
  "invalid label"
)